feat: simplify domains + support for aeko event tracking
